--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natours</title>
     <base href="/">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="styles/css/style.css">
+    <link rel="stylesheet" href="./styles/css/style.css">
 </head>
 
 <body>
     <header class="header">
 
         <div class="logo-box">
-            <img src="img/logo-white.png" alt="logo" class="logo">
+            <img src="./img/logo-white.png" alt="logo" class="logo">
         </div>
 
         <div class="text-box">
@@ -31,7 +31,7 @@
     </header>
 
 
-    <script src="app.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
