--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natours</title>
-    <!-- <base href="/mypro/"> -->
-    <base href="/">
+    <base href="/mypro/">
+    <!-- <base href="/"> -->
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="./styles/css/style.css">
